--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-**./celeris/__pycache__/runner.cpython-310.pyc
-**./celeris/__pycache__/solver.cpython-310.pyc
+
+**./__pycache__/*
 **./plots/*.png
