--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,12 +2,15 @@ name: Build & Deploy Sphinx Docs
 
 on:
   push:
-    branches: [ "main" ]   # change if your default branch is not 'main'
+    branches: ["main"]
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -17,13 +20,17 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Install system deps
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y imagemagick
+
       - name: Install documentation dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f docs/requirements.txt ]; then
             pip install -r docs/requirements.txt
           else
-            # fallback if requirements.txt is missing
             pip install sphinx sphinx-rtd-theme
           fi
 
